--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/switch_thumb"
     tools:context=".Splash">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             <com.srinivas.biowax.CircularImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/biowaxx" />
+                android:src="@drawable/bio_logo" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                 android:foregroundGravity="center"
                 android:gravity="center"
                 android:text="BIOWAX"
-                 android:textSize="30dp"
+                android:textSize="30dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
