--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -37,7 +37,6 @@
     </me.relex.circleindicator.CircleIndicator>
 
     <TextView
-        android:textColor="@color/white"
         android:layout_width="329dp"
         android:layout_height="21dp"
         android:layout_marginStart="8dp"
@@ -48,6 +47,8 @@
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="skip"
+        android:id="@+id/skip_tv"
+        android:textColor="@color/white"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/my_viewpager"
