--- a/app/src/main/res/layout/biowastageform.xml
+++ b/app/src/main/res/layout/biowastageform.xml
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/myimage_back"
             android:layout_width="65dp"
             android:layout_height="match_parent"
             android:padding="10dp"
@@ -376,6 +377,7 @@
 
 
             <ImageView
+                android:visibility="gone"
                 android:src="@drawable/icon_cptu"
                 android:layout_marginBottom="50dp"
                 android:layout_gravity="center"
