--- a/app/src/main/res/drawable/yellowbutton.xml
+++ b/app/src/main/res/drawable/yellowbutton.xml
@@ -9,7 +9,7 @@
         android:topLeftRadius="30dp"
         android:topRightRadius="30dp" />
 
-    <solid android:color="#008577" />
+    <solid android:color="#ffffff" />
 
     <padding
         android:bottom="0dp"
