--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -4,29 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/dashboard"
+    android:gravity="center"
+    android:layout_gravity="center"
     android:orientation="vertical"
     tools:context=".Dashboard">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Dashboard"
+        android:layout_height="100dp"
+        android:layout_gravity="center|bottom"
+          android:gravity="center"
+        android:text="BIOWAX"
+        android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="3">
 
         <LinearLayout
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:id="@+id/garbage_ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -35,7 +38,8 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/border"
-            android:id="@+id/garbage_ll"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -54,52 +58,19 @@
                 android:layout_weight="1.5"
                 android:gravity="center"
                 android:text="Garbage "
-                android:textColor="@color/black"
+                android:textColor="@color/colorPrimary"
                 android:textSize="15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
+        <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/history_ll"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/border"
-            android:orientation="vertical"
-            android:weightSum="2">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:layout_weight=".5"
-                android:padding="15dp"
-                android:src="@drawable/binslist" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_weight="1.5"
-                android:gravity="center"
-                android:text="History"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+            android:layout_weight="1.3" />
 
         <LinearLayout
             android:id="@+id/mapview_ll"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -108,6 +79,8 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/border"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -126,7 +99,7 @@
                 android:layout_weight="1.5"
                 android:gravity="center"
                 android:text="Map View"
-                android:textColor="@color/black"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -137,13 +110,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="3">
 
         <LinearLayout
             android:id="@+id/driverinfo_ll"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -152,6 +127,8 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/border"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -170,16 +147,19 @@
                 android:layout_weight="1.5"
                 android:gravity="center"
                 android:text="Driver Info "
-                android:textColor="@color/black"
+                android:textColor="@color/colorPrimary"
                 android:textSize="15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.3" />
+
         <LinearLayout
             android:id="@+id/receipt_ll"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -188,6 +168,8 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/border"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -206,16 +188,26 @@
                 android:layout_weight="1.5"
                 android:gravity="center"
                 android:text="Receipt"
-                android:textColor="@color/black"
+                android:textColor="@color/colorPrimary"
                 android:textSize="15dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
         <LinearLayout
-            android:id="@+id/logout_ll"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:id="@+id/history_ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -224,6 +216,49 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/border"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:layout_weight=".5"
+                android:padding="15dp"
+                android:src="@drawable/binslist" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="1.5"
+                android:gravity="center"
+                android:text="History"
+                android:textColor="@color/colorPrimary"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.3" />
+
+        <LinearLayout
+            android:id="@+id/logout_ll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/border"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:orientation="vertical"
             android:weightSum="2">
 
@@ -242,12 +277,13 @@
                 android:layout_weight="1.5"
                 android:gravity="center"
                 android:text="Logout"
-                android:textColor="@color/black"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
 
     </LinearLayout>
+
 
 </LinearLayout>
