--- a/app/src/main/res/layout/garbage_history.xml
+++ b/app/src/main/res/layout/garbage_history.xml
@@ -4,37 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/lisbg"
     android:orientation="vertical"
     tools:context=".GarbageCollection">
 
-    <!-- <ScrollView
-         android:layout_width="match_parent"
-         android:layout_height="match_parent">-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:src="@drawable/back" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginRight="20dp"
             android:gravity="center"
             android:text="Garbage History"
+            android:textColor="@color/white"
             android:textSize="25dp"
             android:textStyle="bold" />
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/hospitalb_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="40dp">
 
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
