--- a/app/src/main/res/layout/history_single.xml
+++ b/app/src/main/res/layout/history_single.xml
@@ -18,10 +18,13 @@
         android:orientation="horizontal">
 
         <com.srinivas.biowax.CircularImageView
-
-            android:layout_width="100dp"
+            android:alpha=".7"
+            android:layout_marginLeft="8dp"
+            android:layout_width="90dp"
+            android:foregroundGravity="center"
+            android:layout_gravity="center"
             android:layout_height="match_parent"
-            android:src="@drawable/biowaxx" />
+            android:src="@drawable/image1hd" />
 
         <LinearLayout
             android:layout_width="match_parent"
