--- a/app/src/main/res/layout/hostpital_single.xml
+++ b/app/src/main/res/layout/hostpital_single.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="85dp"
     android:layout_marginLeft="8dp"
@@ -10,24 +11,36 @@
     android:weightSum="3">
 
     <LinearLayout
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/hostpital_ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="horizontal">
 
         <com.srinivas.biowax.CircularImageView
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
-            android:src="@drawable/flash" />
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/building" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:weightSum="2">
+            android:weightSum="4">
+
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/routename"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|start"
+                android:text="Seven Hills"
+                android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/hospitalname_tv"
@@ -39,13 +52,23 @@
                 android:textSize="15dp" />
 
             <TextView
-                android:id="@+id/hostpital_code_tv"
+                android:id="@+id/contactno"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center|start"
                 android:text="1002"
                 android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|start"
+                android:text="1002"
+                android:textSize="15dp" />
+
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
