--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,7 +6,7 @@
     android:weightSum="3">
 
     <ImageView
-        android:src="@drawable/image3"
+        android:src="@drawable/image3hd"
          android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
