--- a/app/src/main/res/layout/biowastageform.xml
+++ b/app/src/main/res/layout/biowastageform.xml
@@ -34,6 +34,7 @@
             android:textStyle="bold" />
 
         <ImageView
+            android:id="@+id/done_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
